--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,5 +24,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.1.0'
     //compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
     //compile group: 'org.apache.httpcomponents' , name: 'httpclient-android' , version: '4.3.5.1'
+    compile 'com.oguzdev:CircularFloatingActionMenu:1.0.2'
     compile files('libs/httpclient-android-4.3.5.1.jar')
 }
