--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,7 @@
 
     <!-- Internet permission -->
     <uses-permission android:name="android.permission.INTERNET" />
-
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
@@ -14,7 +13,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,20 +22,29 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".AllFTActivity"
-            android:label="@string/title_activity_all_ft" >
-        </activity>
-        <activity
-            android:name=".NewFoodTestActivity"
-            android:label="@string/title_activity_new_ft" >
-        </activity>
-        <activity
-            android:name=".EditFoodTestActivity"
-            android:label="@string/title_activity_edit_ft" >
-        </activity>
-        <activity
-            android:name=".dashboard.DashboardActivity"
+            android:name=".activities.DashboardActivity"
             android:label="@string/title_activity_dashboard" >
+        </activity>
+        <activity
+            android:name=".activities.NewFoodTestActivity"
+            android:label="@string/title_activity_new_ft" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.ahmadfauzi.testconnect.activities.DashboardActivity" />
+        </activity>
+        <activity
+            android:name=".activities.EditFoodTestActivity"
+            android:label="@string/title_activity_edit_ft" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.ahmadfauzi.testconnect.activities.DashboardActivity" />
+        </activity>
+        <activity
+            android:name=".activities.NewReagentActivity"
+            android:label="@string/title_activity_new_reagent" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.ahmadfauzi.testconnect.activities.DashboardActivity" />
         </activity>
     </application>
 
